corrected overflow on navbar

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
 ul {
 	list-style-type: none;
 	height: 100%;
+	overflow: hidden;
 }
 
 	
